cabal-version:   2.4
name:            hyahtzee2
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Damien Cassou
maintainer:      Damien Cassou <damien@cassou.me>
copyright:       2021 Damien Cassou
tested-with:     GHC ==8.10.2
extra-doc-files:
  README.org

category:        Game
-- description:     description
synopsis:        Famous Yahtzee dice-game with a terminal user-interface
homepage:        https://github.com/DamienCassou/hyahtzee2
source-repository head
  type:     git
  location: git://github.com/DamienCassou/hyahtzee2.git

common common-options
  build-depends:
    , base               >=4.9 && <5
    , containers
    , random
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Dice
    Game
    Round
    Score
    ScoreCard
    Types
    Util

  build-depends:

executable hyahtzee2-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , hyahtzee2

test-suite hyahtzee2-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hyahtzee2
    , doctest

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
