cabal-version:   2.4
name:            hyahtzee2
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Damien Cassou
maintainer:      Damien Cassou <damien@cassou.me>
copyright:       2021 Damien Cassou
tested-with:     GHC ==8.10.2
extra-doc-files:
  README.org

category:        Game
-- description:     description
synopsis:        Famous Yahtzee dice-game with a terminal user-interface
homepage:        https://github.com/DamienCassou/hyahtzee2
source-repository head
  type:     git
  location: git://github.com/DamienCassou/hyahtzee2.git

common common-options
  build-depends:
    , base               >=4.9 && <5
    , random
  default-language: Haskell2010
  ghc-options:
    -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html
    -- https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -- activate all warnings:
    -Weverything
    -- improve future compatibility:
    -Wcompat
    -- accept importing Prelude implicitely:
    -Wno-implicit-prelude
    -- accept "qualified" right after "import":
    -Wno-prepositive-qualified-module
    -- fixing these warnings involves fixing our dependencies:
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations
    -- https://ghc.haskell.org/trac/ghc/ticket/14794#ticket:
    -Wno-missing-exported-signatures

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Hyahtzee2.Dice
    Hyahtzee2.Figure
    Hyahtzee2.Game
    Hyahtzee2.Round
    Hyahtzee2.Score
    Hyahtzee2.ScoreCard
    Hyahtzee2.Util

  build-depends:
    containers

executable hyahtzee2-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -Wno-unsafe
  other-modules:
    Core
    Draw
    Events

  build-depends:
    , hyahtzee2
    , brick
    , vty

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    ScoreTests
    UtilTests

  build-depends:
      base >= 4 && < 5
    , tasty >= 1.4.1
    , tasty-hunit
    , hyahtzee2
